--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "yiisoft/yii2": "~2.0.6"
     },
     "license": "MIT",
     "authors": [
