--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.6.0",
-        "yiisoft/yii2": "~2.0.6"
+        "yiisoft/yii2": "~2.0.6",
+
+        "drnixx/yii2-jquery-migrate-asset": "^3.0.1"
     },
     "license": "MIT",
     "authors": [
