--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.6",
 
+        "drnixx/yii2-onix": "^1.5.18",
         "drnixx/yii2-jquery-migrate-asset": "^3.0.1"
     },
     "license": "MIT",
